# cmake_test

./: .gitignore  compile.bat
2/: CMakeLists.txt  main.c
3/: CMakeLists.txt
4/src/: CMakeLists.txt
44-dll-gen/: CMakeLists.txt
44-dll-gen/libhello/: hello.c  hello.h
44-dll-gen/output/: libhello.lib
44-dll-gen/src/: CMakeLists.txt
44-dll-import/: compile.bat
44-dll-import/libhello/: CMakeLists.txt
44-dll-import/src/: CMakeLists.txt  hello.h
44-static-import/: CMakeLists.txt
44-static-import/libhello/: CMakeLists.txt
44-static-import/src/: CMakeLists.txt  hello.lib
